--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,16 @@
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <!-- 通用样式 -->
   <link rel="stylesheet" href="assets/css/common.css">
+  <!-- 字体文件样式 -->
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body class="body1">
   <app-root></app-root>
 </body>
 
